Closed Bug 1733057 Opened 3 years ago Closed 3 years ago

[Linux] Return early when XWindow handle is missing at GLContextProviderGLX::CreateForWidget()

Categories

(Core :: Graphics, defect, P3)

defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox94 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

Return early when XWindow handle is missing at GLContextProviderGLX::CreateForWidget() and don't crash.

Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/0a41f3d6a0da [Linux] Return early when XWindow handle is missing at GLContextProviderGLX::CreateForWidget(), r=rmader
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: