Bug 1733057 [Linux] Return early when XWindow handle is missing at GLContextProviderGLX::CreateForWidget(), r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D126889